--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/petar-parushev-resolute/auVisitTDD#readme",
   "devDependencies": {
+    "jest": "^29.5.0",
     "typescript": "^5.0.2"
   }
 }
